# newtype-rs-demo

./: .gitignore  Cargo.toml  README.md
src/: main.rs  model.rs
