[package]
name = "newtype-rs-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
nutype = { version = "0.4", features = ["serde", "regex"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"
anyhow = "1"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
